@@ -117,6 +117,7 @@ use Config        ();
 use Scalar::Util  ();
 use Padre::Plugin ();
 use Padre::Task::HTTPClient;
+use Padre::Constant();
 
 our $VERSION = '0.51';
 our @ISA     = 'Padre::Plugin';
@@ -227,7 +228,7 @@ sub _generate {
 	$report{'padre.instance'} = $self->ide->{instance_id};
 
 	# Versioning information
-	my $revision = Padre::Util::revision;
+	my $revision = Padre::Constant::PADRE_REVISION;
 	if ( defined $revision ) {
 
 		# This is a developer build
